--- a/mynewproject/package.json
+++ b/mynewproject/package.json
@@ -15,9 +15,15 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-color-picker": "^0.5.2",
+    "react-native-dimension": "^1.0.6",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-multiple-select": "^0.5.5",
+    "react-native-numeric-input": "^1.8.3",
+    "react-native-picker-select": "^6.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "~2.0.0-alpha.12",
+    "react-native-shapes": "^0.1.0",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
@@ -25,7 +31,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
