--- a/mynewproject/package.json
+++ b/mynewproject/package.json
@@ -11,6 +11,7 @@
     "expo": "~36.0.0",
     "expo-image-picker": "^8.0.2",
     "firebase": "^7.8.1",
+    "galio-framework": "^0.6.3",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
