removed some git left-overs

--- a/mynewproject/package.json
+++ b/mynewproject/package.json
@@ -18,7 +18,9 @@
     "react-native": "~0.61.4",
     "react-native-color-picker": "^0.5.2",
     "react-native-dimension": "^1.0.6",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-hsv-color-picker": "^1.0.1",
     "react-native-multiple-select": "^0.5.5",
     "react-native-numeric-input": "^1.8.3",
     "react-native-picker-select": "^6.5.0",
