--- a/mynewproject/package.json
+++ b/mynewproject/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.3.0",
     "expo": "~36.0.0",
     "expo-image-picker": "^8.0.2",
     "firebase": "^7.8.1",
@@ -16,11 +17,14 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-add-calendar-event": "^3.0.1",
+    "react-native-appearance": "^0.3.3",
     "react-native-color-picker": "^0.5.2",
     "react-native-dimension": "^1.0.6",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-hsv-color-picker": "^1.0.1",
+    "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-multiple-select": "^0.5.5",
     "react-native-numeric-input": "^1.8.3",
     "react-native-picker-select": "^6.5.0",
