--- a/mynewproject/package.json
+++ b/mynewproject/package.json
@@ -22,6 +22,7 @@
     "react-native-dimension": "^1.0.6",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-hsv-color-picker": "^1.0.1",
     "react-native-modal-datetime-picker": "^8.5.2",
     "react-native-multiple-select": "^0.5.5",
