--- a/mynewproject/package.json
+++ b/mynewproject/package.json
@@ -27,6 +27,7 @@
     "react-native-modal-datetime-picker": "^8.5.2",
     "react-native-multiple-select": "^0.5.5",
     "react-native-numeric-input": "^1.8.3",
+    "react-native-paper": "^3.6.0",
     "react-native-picker-select": "^6.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "~2.0.0-alpha.12",
